# NewsBlockchain

./: .all-contributorsrc  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  appveyor.yml
cmake/modules/: Findglog.cmake  Findjson.cmake  Findrestbed.cmake
src/: main.cpp  project.h
src/blockchain/: Blockchain.cpp  Blockchain.h  BloomFilter.cpp  BloomFilter.h  ChainBlock.cpp  ChainBlock.h
src/hash/: CrcHash.cpp  CrcHash.h  Hash.cpp  Hash.h  IHashFunc.h  Sha256.cpp  Sha256.h  Sha256standard.cpp  Sha256standard.h
src/huffman/: Huffman.cpp  Huffman.h
src/network/: App.cpp  App.h  Controller.cpp  Controller.h  Endpoint.cpp  Endpoint.h  GlogLogger.h  Serializer.cpp  Serializer.h  StaticController.cpp  StaticController.h
src/search/: Search.cpp  Search.h
src/util/: Byte.cpp  Byte.h  ByteBuffer.cpp  ByteBuffer.h  Int.cpp  Int.h  MurmurHash.h  StringUtil.cpp  StringUtil.h  Types.h
static/: blockchain.html  compress.html  detail.html  hash.html  index.html  search.html  validate.html
static/js/: blockchain.js  compress.js  config.js  detail.js  hash.js  module.blockchain.js  module.constants.js  module.functions.js  search.js  test.js  validate.js
static/templates/: block_lists.hbs  detail.hbs  diff_list.hbs
test/: CMakeLists.txt  TestByte.cpp  TestByteBuffer.cpp  TestInt.cpp  unit_tests.cpp
test/blockchain/: TestBlockchain.cpp  TestBloomFilter.cpp  TestChainBlock.cpp
test/hash/: TestCrcHash.cpp  TestHash.cpp  TestSha256.cpp
test/huffman/: TestHuffman.cpp
test/search/: TestSearch.cpp
test/util/: TestByte.cpp  TestByteBuffer.cpp  TestInt.cpp  TestStringUtil.cpp
